cmake_minimum_required(VERSION 3.8)

project("SRT_listener_app")
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_HAVE_THREADS_LIBRARY 1)
set(CMAKE_USE_WIN32_THREADS_INIT 0)
set(CMAKE_USE_PTHREADS_INIT 1)
set(THREADS_PREFER_PTHREAD_FLAG ON)
add_subdirectory(srt)
include_directories(srt)
include_directories(srt/srtcore)
add_executable(SRT_listener_app "SRT_listener_app.cpp" "Listener.hpp" ConfigFileReader.cpp ConfigFileReader.hpp ConfigReaderExceptions.hpp Listener.cpp ListenerException.hpp Server.cpp Server.hpp ServerException.hpp FIFO.cpp FIFO.hpp FIFOexception.hpp)
target_link_libraries(SRT_listener_app srt)